# scrapbook-annotate

./: .gitignore  Cargo.toml  README.md  create-posts.py  scrapbook-annotate.code-workspace
annotations/: annotations.yaml  annotations2.yaml  annotations3.yaml  pages.yaml  pages2.yaml  pages3.yaml
posts/: .gitignore
src/: main.rs
