[package]
name = "scrapbook-annotate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.1"
egui = { version = "0.29.1", features = ["serde"] }
egui_extras = { version = "0.29.1", features = ["image"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
imageproc = "0.25.0"
env_logger = "0.11.5"

serde_json = "1.0.132"
serde = "1.0.215"
serde_yaml = "0.9.34"

aws-config = "1.5.10"
aws-sdk-textract = "1.49.0"
tokio = { version = "1", features = ["full"] }
